--- a/GrandmasCookieFactory/Pages/AddRecipe.cshtml
+++ b/GrandmasCookieFactory/Pages/AddRecipe.cshtml
@@ -9,14 +9,18 @@
 
     <label for="popularity">Popularity: </label>
     <input type="number" id="popularity" asp-for="@Model.RecipeModel.Popularity" />
-
-    <label for="ingredients">Ingredients: </label>
-    <input type="text" id="ingredients" asp-for="@Model.IngredientsModel.Key" />
-
-    <label for="amount">Amount: </label>
-    <input type="text" id="amount" asp-for="@Model.IngredientsModel.Value" />
-
+    <div class="form-group" v-for="(input,k) in inputs" :key="k">
+        <input type="text" class="form-control" v-model="input.key" asp-for="@Model.RecipeModel.Ingredients">
+        <input type="text" class="form-control" v-model="input.value" asp-for="@Model.RecipeModel.Ingredients">
+        <span>
+            <i class="fas fa-minus-circle" @@click="remove(k)" v-show="k || ( !k && inputs.length > 1)">Remove</i>
+            <i class="fas fa-plus-circle" @@click="add(k)" v-show="k == inputs.length-1">Add fields</i>
+        </span>
+    </div>
+    @*<button @@click="addCandidate">
+        Submit
+    </button>*@
     <label for="description">Description: </label>
     <input type="text" id="description" asp-for="@Model.RecipeModel.Description" />
-
+    <button type="submit" class="btn btn-primary">Submit</button>
 </form>
