--- a/GrandmasCookieFactory/Pages/AddRecipe.cshtml
+++ b/GrandmasCookieFactory/Pages/AddRecipe.cshtml
@@ -17,6 +17,15 @@
         <label for="amount" class="form-label">Amount: </label>
         <input type="text" class="form-control" id="amount" asp-for="@Model.IngredientsModel.Value" required>
 
+        <div class="form-group border p-2 m-2" v-for="(input,k) in inputs" :key="k">
+            <label for="ingredients" class="form-label">Ingredient: </label>
+            <input type="text" class="form-control" v-model="input.key">
+            <label for="amount" class="form-label">Amount: </label>
+            <input type="text" class="form-control" v-model="input.value">
+            <i class="btn btn-danger mt-2" @@click="remove(k)" v-show="k || ( !k && inputs.length > 1)">Remove</i>
+            <i class="btn-block btn-info" @@click="add(k)" v-show="k == inputs.length-1">Add fields</i>
+        </div>
+
         <label for="description" class="form-label">Description: </label>
         <input type="text" id="description" class="form-control" asp-for="@Model.RecipeModel.Description" required />
 
@@ -28,14 +37,7 @@
 
 <!--
 
-        <div class="form-group" v-for="(input,k) in inputs" :key="k">
-        <input type="text" class="form-control" v-model="input.key" asp-for="">
-        <input type="text" class="form-control" v-model="input.value" asp-for="">
-        <span>
-            <i class="fas fa-minus-circle" @@click="remove(k)" v-show="k || ( !k && inputs.length > 1)">Remove</i>
-            <i class="fas fa-plus-circle" @@click="add(k)" v-show="k == inputs.length-1">Add fields</i>
-        </span>
-    </div>
+
 
 
     @*<button @@click="addCandidate">
